--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,7 +9,10 @@
         font-size: 2.35rem;
     }
     @include mq(large){
-        font-size: 1.95rem;
+        font-size: 1.5rem;
+    }
+    @include mq(extra-large){
+        font-size: 1.3rem;
     }
 }
 
@@ -19,14 +22,14 @@ body {
     font-weight: 700;
 }
 
-/** Layout **/
+/* Layout */
 
-h1 {
+h2 {
     font-size: 1.3rem;
     font-weight: 900;
 }
 
-/** Header **/
+/* Header */
 
 header {
     h1 {
@@ -41,14 +44,14 @@ header {
 
     }
 
-    &.--with-home-link {
+    &.header--with-home-link {
         a {
             color: black;
         }
     }
 }
 
-/** Home **/
+/* Home */
 
 .location {
     font-size: 0.9rem;
@@ -80,7 +83,7 @@ header {
     }
 }
 
-/** Restaurant **/
+/* Restaurant */
 
 .restaurant {
     &__title {
@@ -92,7 +95,6 @@ header {
         i {
             font-size: 1.5rem;
         }
-        
     }
     &__menu {
         h2 {
@@ -102,7 +104,7 @@ header {
     }
 }
 
-/** Components **/
+/* Components */
 
 .button {
     color: white;
@@ -172,7 +174,7 @@ header {
     }
 }
 
-/** Footer **/
+/* Footer */
 
 footer {
     color: white;
