--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,7 @@ header {
         margin: 1rem 0 0.5rem 0;
     }
 
-    &.--with-home-link {
+    &.header--with-home-link {
         position: relative;
 
         a :first-child {
