--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,9 +1,9 @@
 @use 'variables' as *;
 
-@mixin box-sizing($box-model) {
-    -webkit-box-sizing: $box-model; // Safari <= 5
-    -moz-box-sizing: $box-model; // Firefox <= 19
-    box-sizing: $box-model;
+@mixin box-sizing($b-model: $box-model) {
+    -webkit-box-sizing: $b-model; // Safari <= 5
+    -moz-box-sizing: $b-model; // Firefox <= 19
+    box-sizing: $b-model;
 }
 
 @mixin padding-main {
